--- a/routes/reviews.ejs
+++ b/routes/reviews.ejs
@@ -17,14 +17,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-item nav-link" href="/enter-details">Enter Details</a>
+                <a class="nav-item nav-link" href="/entry-details">Enter Details</a>
                 <a class="nav-item nav-link" href="/employee-details">Emloyee Details</a>
                 <a class="nav-item nav-link" href="/about">About Company</a>
                 <a class="nav-item nav-link active" href="#">Company Reviews <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="/leave">Leave</a>
               </div>
               <span class="navbar-text">
-                <button type="button" class="btn btn-danger">Log Out</button>
+                <button type="button" class="btn btn-danger" onclick="location.href='/login'">Log Out</button>
               </span>
             </div>
           </nav>
