--- a/routes/about.ejs
+++ b/routes/about.ejs
@@ -24,7 +24,7 @@
                 <a class="nav-item nav-link" href="/leave">Leave</a>
               </div>
               <span class="navbar-text">
-                <button type="button" class="btn btn-danger">Log Out</button>
+                <button type="button" class="btn btn-danger" onclick="location.href='/login'">Log Out</button>
               </span>
             </div>
           </nav>
