--- a/routes/leave-approval.ejs
+++ b/routes/leave-approval.ejs
@@ -4,7 +4,6 @@
         <title>Employee Management</title>
         <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-
         <link href="style.css" rel="stylesheet">
       
     </head>
@@ -17,14 +16,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-item nav-link " href="/employee-entry">Enter Details </a>
-                <a class="nav-item nav-link active" href="#">Emloyee Details <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="/about">About Company</a>
-                <a class="nav-item nav-link" href="/reviews">Company Reviews</a>
-                <a class="nav-item nav-link" href="/leave">Leave</a>
+                <a class="nav-item nav-link" href="/employee-edit">Edit Details</a>
+                <a class="nav-item nav-link active " href="/leave-approval">Leave Approval  <span class="sr-only">(current)</span></a>
+                
               </div>
               <span class="navbar-text">
-                <button type="button" class="btn btn-danger" onclick="location.href='/login'">Log Out</button>
+                <button type="button" class="btn btn-danger" onclick="location.href='/admin'">Log Out</button>
               </span>
             </div>
           </nav>
