--- a/routes/register.ejs
+++ b/routes/register.ejs
@@ -10,26 +10,35 @@
        <div class="container">
         <div class="card">
             <div class="card-body">
-                <form>
+                <form method="POST" action="/register">
                     <div class="form-group">
                       <label for="email">Email address</label>
-                      <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+                      <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email" name="email">
                       <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                     </div>
                     <div class="form-group">
                       <label for="password">Password</label>
-                      <input type="password" class="form-control" id="password" placeholder="Password">
+                      <input type="password" class="form-control" id="password" placeholder="Password" name="password">
                     </div>
                     <div class="form-group">
                         <label for="cpassword">Confirm Password</label>
-                        <input type="password" class="form-control" id="cpassword" placeholder="Password">
+                        <input type="password" class="form-control" id="cpassword" placeholder="Password" name="cpassword">
                       </div>
                     
                     <button type="submit" class="btn btn-primary">Submit</button>
-                    <button type="submit" class="btn btn-success">Register</button>
+
                   </form>
             </div>
           </div>
        </div>
+       <script>
+         var password = document.getElementById('password').value;
+         var cpassword = document.getElementById('cpassword').value;
+         function password(){
+           if(password==null && password!=cpassword){
+             alert("enter valid password");
+           }
+         }
+      </script>
     </body>
 </html>
