--- a/routes/admin-login.ejs
+++ b/routes/admin-login.ejs
@@ -10,10 +10,10 @@
        <div class="container">
         <div class="card">
             <div class="card-body">
-                <form>
+                <form method="POST" action="/admin-login">
                     <div class="form-group">
                       <label for="exampleInputEmail1">Admin Email address</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" name="email">
                       <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                     </div>
                   
