--- a/routes/dashboard.ejs
+++ b/routes/dashboard.ejs
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Employee Management</title>
-        <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+        <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
 
         <link href="style.css" rel="stylesheet">
       
@@ -28,7 +28,7 @@
               </span>
             </div>
           </nav>
-          <form>
+          <form method="POST" action="/details-entry">
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="inputEmail4">First Name</label>
@@ -42,7 +42,7 @@
             <div class="form-row">
             <div class="form-group col-md-6">
                 <label for="inputEmail4">Start Date</label>
-                <input type="date" class="form-control" id="inputEmail4" name="startdate"> 
+                <input type="date" class="form-control" id="inputEmail4" name="startdate" > 
               </div>
               <div class="form-group col-md-6">
                 <label for="inputPassword4">Job Title</label>
@@ -50,11 +50,11 @@
               </div>
             </div>
             <div class="custom-control custom-radio custom-control-inline">
-                <input type="radio" id="customRadioInline1" name="Type" class="custom-control-input" name="type" value="Full Timer">
+                <input type="radio" id="customRadioInline1" class="custom-control-input" name="type" value="Full Timer">
                 <label class="custom-control-label" for="customRadioInline1">Full Timer</label>
               </div>
               <div class="custom-control custom-radio custom-control-inline">
-                <input type="radio" id="customRadioInline2" name="Type" class="custom-control-input" name="type" value="Intern/Freelancer">
+                <input type="radio" id="customRadioInline2" class="custom-control-input" name="type" value="Intern/Freelancer">
                 <label class="custom-control-label" for="customRadioInline2">Intern/Freelancer</label>
               </div>
             <div class="form-row">
@@ -73,8 +73,8 @@
               </div>
               <div class="form-row">
                 <div class="form-group col-md-6">
-                    <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Team</label>
-                    <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref" name="team">
+                    <label class="my-1 mr-2" for="team">Team</label>
+                    <select class="custom-select my-1 mr-sm-2" id="team" name="team">
                       <option selected>Choose...</option>
                       <option value="developer">Developer</option>
                       <option value="tester">Tester</option>
@@ -101,7 +101,7 @@
                   </div>
               </div>
             
-            <button type="submit" class="btn btn-primary">Sign in</button>
+            <button type="submit" class="btn btn-primary">Enter</button>
           </form>
        </div>
               
