--- a/routes/leave-approval.ejs
+++ b/routes/leave-approval.ejs
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>Employee Management</title>
-        <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-        <link href="style.css" rel="stylesheet">
+        <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+        <link href="/style.css" rel="stylesheet">
       
     </head>
     <body>
@@ -18,7 +18,7 @@
               <div class="navbar-nav">
                 <a class="nav-item nav-link" href="/employee-edit">Edit Details</a>
                 <a class="nav-item nav-link active " href="/leave-approval">Leave Approval  <span class="sr-only">(current)</span></a>
-                
+                <a class="nav-item nav-link" href="/review-details">Reviews</a>
               </div>
               <span class="navbar-text">
                 <button type="button" class="btn btn-danger" onclick="location.href='/admin'">Log Out</button>
@@ -28,31 +28,35 @@
           <table class="table">
             <thead class="thead-light">
               <tr>
-                <th scope="col">#</th>
-                <th scope="col">First</th>
-                <th scope="col">Last</th>
-                <th scope="col">Handle</th>
+                <th scope="col">Days</th>
+                <th scope="col">From</th>
+                <th scope="col">To</th>
+                <th scope="col">Subject</th>
+                <th scope="col">Message</th>
+                <th scope="col">Tools</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
+                <% employee.forEach(function(x) {%>
+               
+              
+                  <tr>
+                    <td><%= x.days %> </td>
+                    <td><%= x.from_date%></td>
+                    <td><%= x.to_date %></td>
+                    <td><%=x.subject%></td>
+                    <td><%=x.message%></td>
+                   
+                    <td>
+                        
+                        <button type="button" class="btn btn-success" onclick="location.href='/approve/<%=x.user_rid%>'">Approve</button>
+                        <button type="button" class="btn btn-danger" onclick="location.href='/deny/<%=x.user_rid%>'">Deny</button>
+                    </td>
+                  </tr>
+                <%});%>
               </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
-              </tr>
+             
             </tbody>
           </table>
        </div>
