--- a/index.ejs
+++ b/index.ejs
@@ -22,7 +22,7 @@
                     </div>
                     
                     <button type="submit" class="btn btn-primary">Login</button>
-                    <button type="submit" class="btn btn-success">Register</button>
+                    <button type="button" class="btn btn-success" onclick="location.href='/register'">Register</button>
                   </form>
             </div>
           </div>
